--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+.wellness-tips-section .list-group-item {
+    border-bottom: none;
+}
+.wellness-tips-section h2 {
+    font-family: 'Handlee', cursive;
+    color: #3B2F2F;
+}
 /* Main stylesheet for Seven Seas Spa */
 
 /* Change navbar font color */
@@ -19,6 +26,22 @@
 }
 
 .hero-section .btn {
+    color: #3B2F2F;
+}
+/* Services Section Card Image Size */
+.services-section .card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.services-section h2 {
+    font-family: 'Handlee', cursive;
+    color: #3B2F2F;
+}
+
+.services-section .card-title {
+    font-family: 'Handlee', cursive;
     color: #3B2F2F;
 }
 }
